--- a/server/package.json
+++ b/server/package.json
@@ -15,18 +15,23 @@
   "dependencies": {
     "appmetrics": "^4.0.0",
     "appmetrics-dash": "^4.0.0",
+    "assert": "^1.4.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "docker-service-api": "^17.12.19",
     "dockerode": "^2.5.5",
     "express": "^4.16.3",
     "http": "0.0.0",
+    "https": "^1.0.0",
     "influx": "^5.0.7",
     "net": "^1.0.2",
     "node-docker-api": "^1.1.22",
     "nodemon": "^1.18.2",
+    "path": "^0.12.7",
+    "pug": "^2.0.3",
     "request": "^2.87.0",
-    "unirest": "^0.5.1"
+    "unirest": "^0.5.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
