--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "appmetrics": "^4.0.0",
     "express": "^4.16.3",
     "net": "^1.0.2",
-    "nodemon": "^1.18.2"
+    "nodemon": "^1.18.2",
+    "system-sleep": "^1.3.6"
   }
 }
